--- a/_includes/svg-icons.html
+++ b/_includes/svg-icons.html
@@ -12,4 +12,5 @@
 {% if site.footer-links.youtube %}<a href="https://youtube.com/{{ site.footer-links.youtube }}"><i class="svg-icon youtube"></i></a>{% endif %}
 {% if site.footer-links.googleplus %}<a href="https://plus.google.com/{{ site.footer-links.googleplus }}"><i class="svg-icon googleplus"></i></a>{% endif %}
 {% if site.footer-links.playconsole %}<a href="https://play.google.com/store/apps/dev?id={{ site.footer-links.playconsole }}"><i class="svg-icon playconsole"></i></a>{% endif %}
+{% if site.footer-links.reddit %}<a href="https://reddit.com/u/{{ site.footer-links.reddit }}"><i class="svg-icon reddit"></i></a>{% endif %}
 {% if site.footer-links.xda %}<a href="https://forum.xda-developers.com/member.php?u={{ site.footer-links.xda }}"><i class="svg-icon xda"></i></a>{% endif %}
